--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,4 +4,5 @@ contact_links:
     about: Join our discord for community updates, discussion, and more!
   - name: Troubleshooting docs & FAQ
     url: https://github.com/betterSEQTA/DesQTA/tree/update-PR-templates/docs
-    about: Check this first if you're having problems setting up the bridge.
+    about: Check this first if you're having problems with DesQTA
+    
