--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,11 +7,18 @@ body:
     attributes:
       value: |
         **Before reporting an issue, please:**
-        1. Search existing issues (including closed ones) to avoid duplicates: [Search Issues](https://github.com/BetterSEQTA/DesQTA/issues)
-        2. Ensure the program is unmodified and no unsupported plugins are installed.
-        3. Provide as much detail as possible including steps to reproduce, screenshots, and logs.  
-        
 
+  - type: checkboxes
+    attributes:
+      label: Confirm
+      options:
+        - label: Search existing issues (including closed ones) to avoid duplicates: [Search Issues](https://github.com/BetterSEQTA/DesQTA/issues)
+          required: true
+        - label: Ensure the program is unmodified and no unsupported plugins are installed.
+          required: true
+        - label: Provide as much detail as possible including steps to reproduce, screenshots, and logs.
+          required: true
+          
   - type: markdown
     attributes:
        value: |
