--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -12,7 +12,7 @@ body:
     attributes:
       label: Confirm
       options:
-        - label: Search existing issues (including closed ones) to avoid duplicates: [Search Issues](https://github.com/BetterSEQTA/DesQTA/issues)
+        - label: Search existing issues (including closed ones) to avoid duplicates.
           required: true
         - label: Ensure the program is unmodified and no unsupported plugins are installed.
           required: true
