--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
 
   - type: checkboxes
     attributes:
-      label: Confirm
+      label: Before creating the issue, make sure you:
       options:
         - label: Search existing issues (including closed ones) to avoid duplicates.
           required: true
