--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,7 +22,7 @@ body:
   - type: markdown
     attributes:
        value: |
-        Please modify the header with a short summary of the bug you are reporting (plasce after [BUG])
+        Please add to the header a short summary of the bug. (place after [BUG])
         
   - type: textarea
     attributes:
