--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,11 +6,12 @@ body:
   - type: markdown
     attributes:
       value: |
-        **Before reporting an issue, please:**
+        **Please add to the header a short summary of the bug. (place after [BUG])**
 
   - type: checkboxes
     attributes:
-      options:
+      label: 
+      options: Before reporting an issue, please
         - label: Search existing issues (including closed ones) to avoid duplicates.
           required: true
         - label: Ensure the program is unmodified and no unsupported plugins are installed.
